# raytracerproject

./: CMakeLists.txt  README.md  build.py  cap.ppm  cornellvid.ppm  lab
include/: OBJ.h  aabb.h  boxCanHit.h  bvh.h  bvhNode.h  camera.h  canHitGeneric.h  canHitGenericList.h  checkerBoardTexture.h  constantMedium.h  constantTexture.h  dielectricMaterial.h  diffuseLightMaterial.h  diffuseMaterial_Lambertian.h  flipNormals.h  generateWorld.h  imageTexture.h  isotrophic.h  material.h  metalMaterial.h  ppmLoader.h  ray.h  rectangleCanHit.h  rotateY.h  sphereCanHit.h  texture.h  translate.h  triangleCanHit.h  vec3.h  xzRectangleCanHit.h  yzRectangleCanHit.h
src/: main.cpp  obj.cpp
